--- a/Backend/.env
+++ b/Backend/.env
@@ -2,3 +2,4 @@ PORT = 1000
 MONGO_DB_USER = root
 MONGO_DB_PASSWORD = admin
 JWT_SECRET_KEY = mywebsite1234
+API_KEY = ac408d8563f34b8cb3249b126b7538a1
