--- a/Backend/.env
+++ b/Backend/.env
@@ -2,4 +2,5 @@ PORT = 1000
 MONGO_DB_USER = root
 MONGO_DB_PASSWORD = admin
 JWT_SECRET_KEY = mywebsite1234
-API_KEY = 05586cfa015a432d8d97899de3b0dcf5
+APP_KEY = e6569539d403bd3727030a61decea576
+APP_ID = edf97c8d
